--- a/yoga/css/style.less
+++ b/yoga/css/style.less
@@ -227,6 +227,15 @@ header {
 			color: #fff;
 			margin-top: 40px;
 		}
+		&-name {
+			margin-top: 64px;
+			color: @main-color;
+			font-size: 34px;
+			span{
+				margin: 0 28px 0 28px;
+				text-align: center;
+			}
+		}
 		&-numbers {
 			margin-top: 40px;
 			font-size: 90px;
